补充之前的注释

--- a/demo/demo1.html
+++ b/demo/demo1.html
@@ -17,7 +17,12 @@
                 return {
                     a:1
                 }
-            }
+            },
+            mounted(){
+                setTimeout(() => {
+                    this.a = 2
+                }, 1000);
+            },
         })
     </script>
 </body>
